FIXED MIFOS-5127 MaxPermSize needed for ci.mifos.org (why not reproducible locally?)